--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -51,6 +51,7 @@
             android:gravity="center_horizontal"
             android:text="IMPORTANT"
             android:textColor="@android:color/holo_red_dark"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
